changes from Jon and added design

--- a/confirmation.html
+++ b/confirmation.html
@@ -61,7 +61,11 @@
                     </div>
                     <div class="row">
                         <div class="col-xs-12">
-                            <h4>The lender(s) you selected will reach out within 24 hours.</h4>
+                            <div class="confirmation-header">
+                                <h2>The lender(s) you selected will reach out within 24 hours.</h2>
+                            </div>
+                        </div>
+                        <div class="col-xs-12">
                             <div class="col-xs-12 col-md-6">
                                 <h5>The following lenders will be contacting you to discuss your loan options:</h5>
                                 <ul class="loan-list">
