--- a/how-we-help.html
+++ b/how-we-help.html
@@ -49,79 +49,78 @@
     <body>
         <section>
         	<header>
-             <!-- Navigation -->
-                <nav class="navbar navbar-default" role="navigation">
-                    <div class="container">
-                        <!-- Brand and toggle get grouped for better mobile display -->
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <!-- Navigation -->
+                    <nav class="navbar navbar-default" role="navigation">
+                        <div class="container">
+                            <!-- Brand and toggle get grouped for better mobile display -->
+                            <div class="navbar-header">
+                                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                                 <span class="sr-only">Toggle navigation</span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
-                            </button>
-                            <a class="navbar-brand" href="/"><img class="logo" src="assets/img/logo.png"></a>
-                        </div>
-
-                        <!-- Collect the nav links, forms, and other content for toggling -->
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                            <ul class="nav navbar-nav">
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Loan Types">Loan Types<b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <a href="business-term-loan.html"> Business Term Loan</a>
-                                        </li>
-                                        <li>
-                                            <a href="equipment-loan.html"> Equipment Loan</a>
-                                        </li>
-                                        <li>
-                                            <a href="merchant-cash-advance.html"> Merchant Cash Advance</a>
-                                        </li>
-                                        <li>
-                                            <a href="invoice-factoring.html"> Invoice Factoring</a>
-                                        </li>
-                                        <li>
-                                            <a href="working-capital-facility.html"> Working Capital Facility</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="How We Help">How We Help<b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <a href="how-we-help.html"> How We Help</a>
-                                        </li>
-                                        <li>
-                                            <a href="about.html"> About Us</a>
-                                        </li>
-                                        <li>
-                                            <a href="contact.html"> Contact Us</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Resources">Resources<b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <a href="business-analysis-report.html"> Business Analysis Report</a>
-                                        </li>
-                                        <li>
-                                            <a href="knowledge-center.html"> Knowledge Center</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                            <div class="btn-group pull-right">
-                                <a role="button" href="loan-types.html" type="button" class="btn btn-default">Find a loan</a>
-                                <a role="button" href="#" type="button" class="btn btn-default">Chat with us</a>
+                                </button>
+                                <a class="navbar-brand" href="/"><img class="logo" src="assets/img/logo.png"></a>
                             </div>
+                            <!-- Collect the nav links, forms, and other content for toggling -->
+                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                <ul class="nav navbar-nav">
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Loan Types">loan types<b class="caret"></b></a>
+                                        <ul class="dropdown-menu">
+                                            <li>
+                                                <a href="business-term-loan.html"> business term loan</a>
+                                            </li>
+                                            <li>
+                                                <a href="equipment-loan.html"> equipment loan</a>
+                                            </li>
+                                            <li>
+                                                <a href="merchant-cash-advance.html"> merchant cash advance</a>
+                                            </li>
+                                            <li>
+                                                <a href="invoice-factoring.html"> invoice factoring</a>
+                                            </li>
+                                            <li>
+                                                <a href="working-capital-facility.html"> working capital facility</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="How We Help">how we help<b class="caret"></b></a>
+                                        <ul class="dropdown-menu">
+                                            <li>
+                                                <a href="how-we-help.html"> how we help</a>
+                                            </li>
+                                            <li>
+                                                <a href="about.html"> about us</a>
+                                            </li>
+                                            <li>
+                                                <a href="contact.html"> contact us</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Resources">resources<b class="caret"></b></a>
+                                        <ul class="dropdown-menu">
+                                            <li>
+                                                <a href="business-analysis-report.html"> business analysis report</a>
+                                            </li>
+                                            <li>
+                                                <a href="knowledge-center.html"> knowledge center</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <div class="btn-group pull-right">
+                                    <a role="button" href="loan-types.html" type="button" class="btn btn-primary">Find a loan</a>
+                                    <a role="button" href="#" type="button" class="btn btn-default">Chat with us</a>
+                                </div>
+                            </div>
+                            <!-- /.navbar-collapse -->
                         </div>
-                        <!-- /.navbar-collapse -->
-                    </div>
-                    <!-- /.container -->
-                </nav>
-            </header>
+                        <!-- /.container -->
+                    </nav>
+                </header>
         </section>
         <section class="container" >
             <div class="row">
@@ -133,11 +132,9 @@
                             <li><a href="contact.html">Contact us</a></li>
                         </ul>
                         <a href="loan-types.html" title="find a loan" class="button-medium">Find a loan</a>
-                        <h3>Why Sageworks?</h3>
-                        <ul>
-                            <li>We get paid by our lending partners, so you pay no fees to us</li>
-                            <li>Your contact info will only be given to the lenders choose</li>
-                        </ul>
+                        <h4>Why Sageworks?</h4>
+                        <p>We get paid by our lending partners, so you pay no fees to us</p>
+                        <p>Your contact info will only be given to the lenders choose</p>
                     </nav>
                 </div>
                 <div class="col-sm-9">
@@ -145,11 +142,11 @@
                         <h1>How We Help</h1>
                     </div>
                     <div class="page-content">
-                        <h2>Educate</h2>
+                        <h5>Educate</h5>
                         <p>Our mission is to educate you, the business owner, on the various forms of capital available to you. Because of this, you pay no additional fees to Sageworks Lending.</p>
-                        <h2>Identify</h2>
+                        <h5>Identify</h5>
                         <p>Sageworks compares your financial needs against our network of certified lenders to identify the best lending solution and loan type for your business‘s unique needs.</p>
-                        <h2>Connect</h2>
+                        <h5>Connect</h5>
                         <p>Finally, Sageworks allows you to compare our lenders side-by-side and choose only the ones with which you want to connect. All of your information remains private unless you specifically choose to connect with a lender.</p>
                         <span>Find out more at <a href="https://sageworks.com">Sageworks.com</a></span>
                     </div>
