--- a/index.html
+++ b/index.html
@@ -55,47 +55,47 @@
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                                 <ul class="nav navbar-nav">
                                     <li class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Loan Types">Loan Types<b class="caret"></b></a>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Loan Types">loan types<b class="caret"></b></a>
                                         <ul class="dropdown-menu">
                                             <li>
-                                                <a href="business-term-loan.html"> Business Term Loan</a>
+                                                <a href="business-term-loan.html"> business term loan</a>
                                             </li>
                                             <li>
-                                                <a href="equipment-loan.html"> Equipment Loan</a>
+                                                <a href="equipment-loan.html"> equipment loan</a>
                                             </li>
                                             <li>
-                                                <a href="merchant-cash-advance.html"> Merchant Cash Advance</a>
+                                                <a href="merchant-cash-advance.html"> merchant cash advance</a>
                                             </li>
                                             <li>
-                                                <a href="invoice-factoring.html"> Invoice Factoring</a>
+                                                <a href="invoice-factoring.html"> invoice factoring</a>
                                             </li>
                                             <li>
-                                                <a href="working-capital-facility.html"> Working Capital Facility</a>
+                                                <a href="working-capital-facility.html"> working capital facility</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="How We Help">How We Help<b class="caret"></b></a>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="How We Help">how we help<b class="caret"></b></a>
                                         <ul class="dropdown-menu">
                                             <li>
-                                                <a href="how-we-help.html"> How We Help</a>
+                                                <a href="how-we-help.html"> how we help</a>
                                             </li>
                                             <li>
-                                                <a href="about.html"> About Us</a>
+                                                <a href="about.html"> about us</a>
                                             </li>
                                             <li>
-                                                <a href="contact.html"> Contact Us</a>
+                                                <a href="contact.html"> contact us</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Resources">Resources<b class="caret"></b></a>
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Resources">resources<b class="caret"></b></a>
                                         <ul class="dropdown-menu">
                                             <li>
-                                                <a href="business-analysis-report.html"> Business Analysis Report</a>
+                                                <a href="business-analysis-report.html"> business analysis report</a>
                                             </li>
                                             <li>
-                                                <a href="knowledge-center.html"> Knowledge Center</a>
+                                                <a href="knowledge-center.html"> knowledge center</a>
                                             </li>
                                         </ul>
                                     </li>
@@ -125,19 +125,19 @@
                 <div class="row">
                     <div class="col-xs-12 col-md-4 col-sm-4 box">
                         <!-- <div class="number-circle">1</div> -->
-                        <h4>Your Business</h4>
+                        <h5>Your Business</h5>
                         <p>has unique lending needs. Find the loan type that best fits those needs.</p>
                         <a href="#" title="learn more" class="button-medium">Learn more <i class="fa  fa-caret-right"></i></a>
                     </div>
                     <div class="col-xs-12 col-md-4 col-sm-4 box">
                         <!-- <div class="number-circle">2</div> -->
-                        <h4>Sageworks Lending</h4>
+                        <h5>Sageworks Lending</h5>
                         <p>identifies the perfect loan alternatives for your business.</p>
                         <a href="how-we-help.html" title="read more" class="button-medium">Show how we help <i class="fa  fa-caret-right"></i></a>
                     </div>
                     <div class="col-xs-12 col-md-4 col-sm-4 box">
                         <!-- <div class="number-circle">3</div> -->
-                        <h4>Your Industry</h4>
+                        <h5>Your Industry</h5>
                         <p>peers have a major impact on your ability to get a loan. See how you compare.</p>
                         <a href="#" title="read more" class="button-medium">Compare to industry <i class="fa  fa-caret-right"></i></a>
                     </div>
