--- a/about.html
+++ b/about.html
@@ -49,88 +49,87 @@
     <body>
         <section>
         	<header>
-             <!-- Navigation -->
-                <nav class="navbar navbar-default" role="navigation">
-                    <div class="container">
-                        <!-- Brand and toggle get grouped for better mobile display -->
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <!-- Navigation -->
+                    <nav class="navbar navbar-default" role="navigation">
+                        <div class="container">
+                            <!-- Brand and toggle get grouped for better mobile display -->
+                            <div class="navbar-header">
+                                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                                 <span class="sr-only">Toggle navigation</span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
-                            </button>
-                            <a class="navbar-brand" href="/"><img class="logo" src="assets/img/logo.png"></a>
-                        </div>
-
-                        <!-- Collect the nav links, forms, and other content for toggling -->
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                            <ul class="nav navbar-nav">
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Loan Types">Loan Types<b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <a href="business-term-loan.html"> Business Term Loan</a>
-                                        </li>
-                                        <li>
-                                            <a href="equipment-loan.html"> Equipment Loan</a>
-                                        </li>
-                                        <li>
-                                            <a href="merchant-cash-advance.html"> Merchant Cash Advance</a>
-                                        </li>
-                                        <li>
-                                            <a href="invoice-factoring.html"> Invoice Factoring</a>
-                                        </li>
-                                        <li>
-                                            <a href="working-capital-facility.html"> Working Capital Facility</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="How We Help">How We Help<b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <a href="how-we-help.html"> How We Help</a>
-                                        </li>
-                                        <li>
-                                            <a href="about.html"> About Us</a>
-                                        </li>
-                                        <li>
-                                            <a href="contact.html"> Contact Us</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Resources">Resources<b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <a href="business-analysis-report.html"> Business Analysis Report</a>
-                                        </li>
-                                        <li>
-                                            <a href="knowledge-center.html"> Knowledge Center</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                            <div class="btn-group pull-right">
-                                <a role="button" href="loan-types.html" type="button" class="btn btn-default">Find a loan</a>
-                                <a role="button" href="#" type="button" class="btn btn-default">Chat with us</a>
+                                </button>
+                                <a class="navbar-brand" href="/"><img class="logo" src="assets/img/logo.png"></a>
                             </div>
+                            <!-- Collect the nav links, forms, and other content for toggling -->
+                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                <ul class="nav navbar-nav">
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Loan Types">loan types<b class="caret"></b></a>
+                                        <ul class="dropdown-menu">
+                                            <li>
+                                                <a href="business-term-loan.html"> business term loan</a>
+                                            </li>
+                                            <li>
+                                                <a href="equipment-loan.html"> equipment loan</a>
+                                            </li>
+                                            <li>
+                                                <a href="merchant-cash-advance.html"> merchant cash advance</a>
+                                            </li>
+                                            <li>
+                                                <a href="invoice-factoring.html"> invoice factoring</a>
+                                            </li>
+                                            <li>
+                                                <a href="working-capital-facility.html"> working capital facility</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="How We Help">how we help<b class="caret"></b></a>
+                                        <ul class="dropdown-menu">
+                                            <li>
+                                                <a href="how-we-help.html"> how we help</a>
+                                            </li>
+                                            <li>
+                                                <a href="about.html"> about us</a>
+                                            </li>
+                                            <li>
+                                                <a href="contact.html"> contact us</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Resources">resources<b class="caret"></b></a>
+                                        <ul class="dropdown-menu">
+                                            <li>
+                                                <a href="business-analysis-report.html"> business analysis report</a>
+                                            </li>
+                                            <li>
+                                                <a href="knowledge-center.html"> knowledge center</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <div class="btn-group pull-right">
+                                    <a role="button" href="loan-types.html" type="button" class="btn btn-primary">Find a loan</a>
+                                    <a role="button" href="#" type="button" class="btn btn-default">Chat with us</a>
+                                </div>
+                            </div>
+                            <!-- /.navbar-collapse -->
                         </div>
-                        <!-- /.navbar-collapse -->
-                    </div>
-                    <!-- /.container -->
-                </nav>
-            </header>
+                        <!-- /.container -->
+                    </nav>
+                </header>
         </section>
         <section class="container" >
             <div class="row">
                 <div class="col-sm-3">
                     <nav class="nav-sidebar">
                         <ul class="nav">
-                            <li><a href="how-we-help.html">How we help</a></li>
-                            <li class="active"><a href="about.html">About us</a></li>
-                            <li><a href="contact.html">Contact us</a></li>
+                            <li><a href="how-we-help.html">how we help</a></li>
+                            <li class="active"><a href="about.html">about us</a></li>
+                            <li><a href="contact.html">contact us</a></li>
                         </ul>
                         <a href="loan-types.html" title="find a loan" class="button-medium">Find a loan</a>
                     </nav>
@@ -140,9 +139,9 @@
                         <h1>About Us</h1>
                     </div>
                     <div class="page-content">
-                        <h2>About Sageworks Lending</h2>
+                        <h5>About Sageworks Lending</h5>
                         <p>Sageworks Lending is the newest solution from Sageworks. Our mission is to help businesses understand credit and quickly find lending options that help them grow. We believe getting funding should be an easy and fast process. With Sageworks Lending, you can find the right loan options for your business in just a few minutes.</p>
-                        <h2>About Sageworks, Inc.</h2>
+                        <h5>About Sageworks, Inc.</h5>
                         <p>Sageworks provides private company financial information and develops financial analysis and risk management solutions. By doing so, we give business professionals data that they can understand and use, which helps them make better financial decisions.</p>
                         <span>Find out more at <a href="https://sageworks.com">Sageworks.com</a></span>
                     </div>
