--- a/loan-results.html
+++ b/loan-results.html
@@ -77,10 +77,6 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div id="top-wizard">
-                    <strong>Progress <span id="location"></span></strong>
-                    <div id="progressbar"></div>
-                </div> -->
             </section>
             <section class="container" >
                 <!-- Start Survey container -->
@@ -92,11 +88,11 @@
                                     <h3>You qualify for [3] loans</h3>
                                 </div>
                                 <div class="col-xs-12">
-                                    <div class="data-list-header">
+                                    <div class="loan-results-header">
                                         <h2>Choose which loan(s) you're interested in learning more about.</h2>
                                     </div>
                                 </div>
-                                <div class="col-xs-12">
+                                <div class="col-xs-10 col-xs-offset-1">
                                     <ul class="data-list">
                                         <li class="col-xs-12 col-sm-6"><input type="text" name="amount" class="form-control" placeholder="Amount to borrow"></li>
                                         <li class="col-xs-12 col-sm-6 styled-select">
@@ -284,7 +280,7 @@
                         <div id="bottom-wizard">
                             <div class="row">
                                 <div class="col-xs-12">
-                                    <a role="button" href="loan-confirmation.html"class="button-large"> Send contact info to selected lenders </a>
+                                    <a role="button" href="confirmation.html" class="button-medium loan-type-btn"> Send contact info to selected lenders </a>
                                 </div>
                             </div>
                         </div>
