--- a/loan-types.html
+++ b/loan-types.html
@@ -59,28 +59,21 @@
                               <div class="progress-bar"></div>
                           </div>
                           <a href="#" class="bs-wizard-dot"></a>
-                          <!-- <div class="bs-wizard-info text-center">Lorem ipsum dolor sit amet.</div> -->
                         </div>
                         
                         <div class="col-xs-4 bs-wizard-step disabled">
                           <div class="text-center bs-wizard-stepnum">Tell us more</div>
                           <div class="progress"><div class="progress-bar"></div></div>
                           <a href="#" class="bs-wizard-dot"></a>
-                          <!-- <div class="bs-wizard-info text-center">Nam mollis tristique erat vel tristique. Aliquam erat volutpat. Mauris et vestibulum nisi. Duis molestie nisl sed scelerisque vestibulum. Nam placerat tristique placerat</div> -->
                         </div>
                         
                         <div class="col-xs-4 bs-wizard-step disabled">
                           <div class="text-center bs-wizard-stepnum">Compare options</div>
                           <div class="progress"><div class="progress-bar"></div></div>
                           <a href="#" class="bs-wizard-dot"></a>
-                          <!-- <div class="bs-wizard-info text-center">Integer semper dolor ac auctor rutrum. Duis porta ipsum vitae mi bibendum bibendum</div> -->
                         </div>
                     </div>
                 </div>
-                <!-- <div id="top-wizard">
-                    <strong>Progress <span id="location"></span></strong>
-                    <div id="progressbar"></div>
-                </div> -->
             </section>
             <section class="container" >
                 <!-- Start Survey container -->
@@ -92,59 +85,72 @@
                                     <h3>Find the right loan for your business in 3 steps.</h3>
                                 </div>
                                 <div class="col-xs-12">
+                                    <h4 class="title-block">Select the best loan for your business.</h4>
+                                    <p>Sageworks connects you with multiple types of funding to fit your business-financing needs. Choose the loan option(s) that work best for you, or skip to the next step if you're not sure.</p>
                                     <div class="loan-type row">
-                                        <div class="col-xs-12 col-sm-6 home-box">
-                                            <h4 class="box-header">Term Loan</h4>
-                                            <ul>
-                                                <li>Set interest rate, amount and term</li>
-                                                <li>Pre-specified, fixed repayment schedule</li>
-                                                <li>Steadily build your business credit with constant repayments</li>
-                                            </ul>
-                                            <a role="button" title="Next" name="forward" class="button-medium loan-type"> Choose </a>
+                                        <div class="col-xs-12 col-sm-2 loan-col-custom">
+                                            <div class="home-box">
+                                                <h4 class="box-header">term loan</h4>
+                                                <ul>
+                                                    <li>Set interest rate, amount and term</li>
+                                                    <li>Pre-specified, fixed repayment schedule</li>
+                                                    <li>Steadily build your business credit with constant repayments</li>
+                                                </ul>
+                                                <a role="button" title="Next" name="forward" class="button-medium loan-type-btn"> Choose </a>
+                                            </div>
                                         </div>
                                         <!-- Pack 2-->
-                                        <div class="col-xs-12 col-sm-6 home-box">
-                                            <h4 class="box-header">Equipment Loan</h4>
-                                            <ul>
-                                                <li>Use an asset to secure its own financing</li>
-                                                <li>Keep ownership throughout term</li>
-                                                <li>Generate income with equipment while paying it off</li>
-                                            </ul>
-                                            <a role="button" title="Choose" name="forward" class="button-medium loan-type"> Choose </a>
+                                        <div class="col-xs-12 col-sm-2 loan-col-custom">
+                                            <div class="home-box">
+                                                <h4 class="box-header">equipment loan</h4>
+                                                <ul>
+                                                    <li>Use an asset to secure its own financing</li>
+                                                    <li>Keep ownership throughout term</li>
+                                                    <li>Generate income with equipment while paying it off</li>
+                                                </ul>
+                                                <a role="button" title="Choose" name="forward" class="button-medium loan-type-btn"> Choose </a>
+                                            </div>
                                         </div>
                                         <!-- Pack 3-->
-                                        <div class="col-xs-12 col-sm-6 home-box">
-                                            <h4 class="box-header">Cash Advance</h4>
-                                            <ul>
-                                                <li>Upfront capital for a fraction of future sales</li>
-                                                <li>Protect cash flow – repayment amount changes relative to sales</li>
-                                            </ul>
-                                            <a role="button" title="Choose" name="forward" class="button-medium loan-type"> Choose </a>
+                                        <div class="col-xs-12 col-sm-2 loan-col-custom">
+                                            <div class="home-box">
+                                                <h4 class="box-header">cash advance</h4>
+                                                <ul>
+                                                    <li>Upfront capital for a fraction of future sales</li>
+                                                    <li>Protect cash flow – repayment amount changes relative to sales</li>
+                                                </ul>
+                                                <a role="button" title="Choose" name="forward" class="button-medium loan-type-btn"> Choose </a>
+                                            </div>
                                         </div>
                                         <!-- Pack 4-->
-                                        <div class="col-xs-12 col-sm-6 home-box">
-                                            <h4 class="box-header">Invoice Factoring</h4>
-                                            <ul>
-                                                <li>Sell accounts receivable for immediate cash</li>
-                                                <li>As sales increase so does access to additional capital</li>
-                                                <li>Spend less time collecting receivables</li>
-                                            </ul>
-                                            <a role="button" title="Choose" name="forward" class="button-medium loan-type"> Choose </a>
+                                        <div class="col-xs-12 col-sm-2 loan-col-custom">
+                                            <div class="home-box">
+                                                <h4 class="box-header">invoice factoring</h4>
+                                                <ul>
+                                                    <li>Sell accounts receivable for immediate cash</li>
+                                                    <li>As sales increase so does access to additional capital</li>
+                                                    <li>Spend less time collecting receivables</li>
+                                                </ul>
+                                                <a role="button" title="Choose" name="forward" class="button-medium loan-type-btn"> Choose </a>
+                                            </div>
                                         </div>
                                         <!-- Pack 5-->
-                                        <div class="col-xs-12 col-sm-6 home-box">
-                                            <h4 class="box-header">Working Capital</h4>
-                                            <ul>
-                                                <li>Draw only the amount of funds you need, when you need them</li>
-                                                <li>No interest charged against funds not used</li>
-                                            </ul>
-                                            <a role="button" title="Choose" name="forward" class="button-medium loan-type"> Choose </a>
+                                        <div class="col-xs-12 col-sm-2 loan-col-custom">
+                                            <div class="home-box">
+                                                <h4 class="box-header">working capital</h4>
+                                                <ul>
+                                                    <li>Draw only the amount of funds you need, when you need them</li>
+                                                    <li>No interest charged against funds not used</li>
+                                                </ul>
+                                                <a role="button" title="Choose" name="forward" class="button-medium loan-type-btn"> Choose </a>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div id="bottom-wizard">
+                            <a role="button" href="steps.html" title="Skip" class="button-medium backward"> Skip </a>
                             <a role="button" href="steps.html" title="Next" class="button-medium forward"> Next </a>
                         </div>
                     </form>
