--- a/steps.html
+++ b/steps.html
@@ -138,24 +138,6 @@
                                         </ul>
                                     </div>
                                 </div>
-                                
-                                <div class="row">
-                                    <div class="col-lg-8 col-lg-offset-2 col-sm-12">
-                                        <ul class="data-list" id="terms">
-                                            <li>
-                                                <strong>I want Sageworks to send my free business analysis report.</strong>
-                                                <label class="switch-light switch-ios ">
-                                                    <input type="checkbox" name="terms" class="required fix_ie8" value="yes">
-                                                    <span>
-                                                    <span class="ie8_hide">No</span>
-                                                    <span>Yes</span>
-                                                    </span>
-                                                    <a></a>
-                                                </label>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
                             </div>
                             <div class="step row">
                                 <ul class="progress-arrows">
@@ -166,6 +148,7 @@
                                 <div class="col-xs-12 main-title">
                                     <h3>Tell us more about your business.</h3>
                                 </div>
+                                <p></p>
                                 <div class="col-xs-12">
                                     <ul class="data-list">
                                         <li><input type="text" name="dept" class="required form-control" placeholder="Existing monthly debt payments"></li>
@@ -216,18 +199,37 @@
                                                 <a></a>
                                             </label>
                                         </li>
-                                        <h4>See the loans you qualify for</h4>
+                                        <a href="loan-types.html" title="find a loan" class="button-large btn-bottom">See the loans you qualify for</a>
                                         <p><small>This report is for your private use only and will not be shared with any lenders</small></p>
                                     </ul>
                                 </div>
                             </div>
                             <div class="row mobile-limit">
-                                <div class="term-hints">
-                                    <h4>Before you select the loan options that best fit your unique needs, check out your business’s financial pulse with your complimentary Sageworks Business Analysis Report below.</h4>
+                                <div class="term-hints row">
+                                    <div class="col-xs-12">
+                                        <h4>Before you select the loan options that best fit your unique needs, check out your business’s financial pulse with your complimentary Sageworks Business Analysis Report below.</h4>
+                                    </div>
+                                    <div class="col-xs-10">
+                                        <h3>Sageworks Business Analysis Report</h3>
+                                    </div>
+                                    <div class="col-xs-2">
+                                        <a href="#" title="download score"><i class="fa fa-download fa-2x pull-right"></i></a>
+                                        <a href="#" title="print score"><i class="fa fa-print fa-2x pull-right"></i></a>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <ul>
+                                            <li>Industry: <span>Finance &amp; Insurance</span></li>
+                                            <li>Founded: <span>2010</span></li>
+                                            <li>Zip Code: <span>27606</span></li>
+                                        </ul>
+                                    </div>
+                                    <div class="col-xs-12">
+                                        <h3>Report Summary</h3>
+                                    </div>
                                 </div>
                                 <dl class="accordion score-accordion">
                                     <dt>
-                                        <span>The Sageworks Score<br><small>What The Lenders Will Look At</small></span>
+                                        <span>The Sageworks Score</span>
                                         <i class="fa fa-plus"></i>
                                     </dt>
                                     <dd class="accordion-inner">
@@ -236,51 +238,62 @@
                                                 <div class="your-business-rating row">
                                                     <div class="score-section-header">Your business is rated:</div>
                                                     <div class="score-table-wrapper col-xs-12">
-                                                        <div class="score-table">
+                                                        <div class="score-table row">
                                                             <div id="AAA" runat="server" class="score-block score-a-plus">
                                                                 <div class="score-block-inner">
-                                                                    <span id="ratingAAA" runat="server" class="rating">A+</span>
+                                                                    <span id="ratingAAA" runat="server" class="rating"></span>
                                                                 </div>
                                                             </div>
                                                             <div id="AA" runat="server" class="score-block score-a">
                                                                 <div class="score-block-inner">
-                                                                    <span id="ratingAA" runat="server" class="rating">A</span>
+                                                                    <span id="ratingAA" runat="server" class="rating"></span>
                                                                 </div>
                                                             </div>
                                                             <div id="A" runat="server" class="score-block score-a-minus">
                                                                 <div class="score-block-inner">
-                                                                    <span id="ratingA" runat="server" class="rating">A-</span>
+                                                                    <span id="ratingA" runat="server" class="rating"></span>
                                                                 </div>
                                                             </div>
                                                             <div id="BBB" runat="server" class="score-block score-b-plus">
                                                                 <div class="score-block-inner">
-                                                                    <span id="ratingBBB" runat="server" class="rating">B+</span>
+                                                                    <span id="ratingBBB" runat="server" class="rating"></span>
                                                                 </div>
                                                             </div>
                                                             <div id="BB" runat="server" class="score-block score-b">
                                                                 <div class="score-block-inner">
-                                                                    <span id="ratingBB" runat="server" class="rating">B</span>
+                                                                    <span id="ratingBB" runat="server" class="rating"></span>
                                                                 </div>
                                                             </div>
                                                             <div id="B" runat="server" class="score-block score-b-minus">
                                                                 <div class="score-block-inner">
-                                                                    <span id="ratingB" runat="server" class="rating">B-</span>
+                                                                    <span id="ratingB" runat="server" class="rating"></span>
                                                                 </div>
                                                             </div>
                                                             <div id="CCC" runat="server" class="score-block score-c-plus">
                                                                 <div class="score-block-inner">
-                                                                    <span id="ratingCCC" runat="server" class="rating">C+</span>
+                                                                    <span id="ratingCCC" runat="server" class="rating"></span>
                                                                 </div>
                                                             </div>
                                                             <div id="CC" runat="server" class="score-block score-c">
                                                                 <div class="score-block-inner">
-                                                                    <span id="ratingCC" runat="server" class="rating">C</span>
+                                                                    <span id="ratingCC" runat="server" class="rating"></span>
                                                                 </div>
                                                             </div>
                                                             <div id="C" runat="server" class="score-block score-c-minus">
                                                                 <div class="score-block-inner">
-                                                                    <span id="ratingC" runat="server" class="rating">C-</span>
+                                                                    <span id="ratingC" runat="server" class="rating"></span>
                                                                 </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="score-grade row">
+                                                            <div class="col-xs-3 col-xs-offset-1 range-block">
+                                                                <h6>Excellent</h6>
+                                                            </div>
+                                                            <div class="col-xs-3 range-block">
+                                                                <h6>Good</h6>
+                                                            </div>
+                                                            <div class="col-xs-3 range-block">
+                                                                <h6>Fair</h6>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -301,8 +314,10 @@
                                                         <p id="ScoreText" runat="server">The Sageworks Small Business Score provides an overall measure of the creditworthiness of a business. It gives a good indication of a business's ability to take on and repay debt.</p>
 
                                                         <div class="score-distribution">
-                                                            <div class="score-distribution-container"></div>
-                                                            <div class="score-distribution-text">Distribution of Business Credit Scores</div>
+                                                            <figure>
+                                                                <img src="/assets/img/lending-graph.png" alt="Sageworks lending report" class="img-responsive">
+                                                                <figcaption>Distribution of Business Credit Scores</figcaption>
+                                                            </figure>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -536,6 +551,7 @@
                     </div>
                         </div>
                         <div id="bottom-wizard">
+                            <a role="button" title="Previous" name="backward" class="button-medium backward"> Previous </a>
                             <a role="button" title="Next" name="forward" class="button-medium forward"> Next </a>
                         </div>
                     </form>
