--- a/working-capital-facility.html
+++ b/working-capital-facility.html
@@ -49,90 +49,89 @@
     <body>
         <section>
         	<header>
-             <!-- Navigation -->
-                <nav class="navbar navbar-default" role="navigation">
-                    <div class="container">
-                        <!-- Brand and toggle get grouped for better mobile display -->
-                        <div class="navbar-header">
-                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                    <!-- Navigation -->
+                    <nav class="navbar navbar-default" role="navigation">
+                        <div class="container">
+                            <!-- Brand and toggle get grouped for better mobile display -->
+                            <div class="navbar-header">
+                                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                                 <span class="sr-only">Toggle navigation</span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
-                            </button>
-                            <a class="navbar-brand" href="/"><img class="logo" src="assets/img/logo.png"></a>
-                        </div>
-
-                        <!-- Collect the nav links, forms, and other content for toggling -->
-                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                            <ul class="nav navbar-nav">
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Loan Types">Loan Types<b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <a href="business-term-loan.html"> Business Term Loan</a>
-                                        </li>
-                                        <li>
-                                            <a href="equipment-loan.html"> Equipment Loan</a>
-                                        </li>
-                                        <li>
-                                            <a href="merchant-cash-advance.html"> Merchant Cash Advance</a>
-                                        </li>
-                                        <li>
-                                            <a href="invoice-factoring.html"> Invoice Factoring</a>
-                                        </li>
-                                        <li>
-                                            <a href="working-capital-facility.html"> Working Capital Facility</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="How We Help">How We Help<b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <a href="how-we-help.html"> How We Help</a>
-                                        </li>
-                                        <li>
-                                            <a href="about.html"> About Us</a>
-                                        </li>
-                                        <li>
-                                            <a href="contact.html"> Contact Us</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li class="dropdown">
-                                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Resources">Resources<b class="caret"></b></a>
-                                    <ul class="dropdown-menu">
-                                        <li>
-                                            <a href="business-analysis-report.html"> Business Analysis Report</a>
-                                        </li>
-                                        <li>
-                                            <a href="knowledge-center.html"> Knowledge Center</a>
-                                        </li>
-                                    </ul>
-                                </li>
-                            </ul>
-                            <div class="btn-group pull-right">
-                                <a role="button" href="loan-types.html" type="button" class="btn btn-default">Find a loan</a>
-                                <a role="button" href="#" type="button" class="btn btn-default">Chat with us</a>
+                                </button>
+                                <a class="navbar-brand" href="/"><img class="logo" src="assets/img/logo.png"></a>
                             </div>
+                            <!-- Collect the nav links, forms, and other content for toggling -->
+                            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                                <ul class="nav navbar-nav">
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Loan Types">loan types<b class="caret"></b></a>
+                                        <ul class="dropdown-menu">
+                                            <li>
+                                                <a href="business-term-loan.html"> business term loan</a>
+                                            </li>
+                                            <li>
+                                                <a href="equipment-loan.html"> equipment loan</a>
+                                            </li>
+                                            <li>
+                                                <a href="merchant-cash-advance.html"> merchant cash advance</a>
+                                            </li>
+                                            <li>
+                                                <a href="invoice-factoring.html"> invoice factoring</a>
+                                            </li>
+                                            <li>
+                                                <a href="working-capital-facility.html"> working capital facility</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="How We Help">how we help<b class="caret"></b></a>
+                                        <ul class="dropdown-menu">
+                                            <li>
+                                                <a href="how-we-help.html"> how we help</a>
+                                            </li>
+                                            <li>
+                                                <a href="about.html"> about us</a>
+                                            </li>
+                                            <li>
+                                                <a href="contact.html"> contact us</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li class="dropdown">
+                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" title="Resources">resources<b class="caret"></b></a>
+                                        <ul class="dropdown-menu">
+                                            <li>
+                                                <a href="business-analysis-report.html"> business analysis report</a>
+                                            </li>
+                                            <li>
+                                                <a href="knowledge-center.html"> knowledge center</a>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                                <div class="btn-group pull-right">
+                                    <a role="button" href="loan-types.html" type="button" class="btn btn-primary">Find a loan</a>
+                                    <a role="button" href="#" type="button" class="btn btn-default">Chat with us</a>
+                                </div>
+                            </div>
+                            <!-- /.navbar-collapse -->
                         </div>
-                        <!-- /.navbar-collapse -->
-                    </div>
-                    <!-- /.container -->
-                </nav>
-            </header>
+                        <!-- /.container -->
+                    </nav>
+                </header>
         </section>
         <section class="container" >
             <div class="row">
                 <div class="col-sm-3">
                     <nav class="nav-sidebar">
                         <ul class="nav">
-                            <li><a href="business-term-loan.html">Business term loan</a></li>
-                            <li><a href="equipment-loan.html">Equipment loan</a></li>
-                            <li><a href="merchant-cash-advance.html">Merchant cash advance</a></li>
-                            <li><a href="invoice-factoring.html">Invoice factoring</a></li>
-                            <li class="active"><a href="working-capital-facility.html">Working capital facility</a></li>
+                            <li><a href="business-term-loan.html">business term loan</a></li>
+                            <li><a href="equipment-loan.html">equipment loan</a></li>
+                            <li><a href="merchant-cash-advance.html">merchant cash advance</a></li>
+                            <li><a href="invoice-factoring.html">invoice factoring</a></li>
+                            <li class="active"><a href="working-capital-facility.html">working capital facility</a></li>
                         </ul>
                         <a href="loan-types.html" title="find a loan" class="button-medium">Find a loan</a>
                     </nav>
@@ -144,38 +143,46 @@
                     <div class="page-content">
                         <p>A working capital facility is an ongoing arrangement between the borrower and lender, allowing the business owner to draw funds against a set, maximum loan balance at any time as long as they do not exceed the limit.</p>
                         <div class="row">
-                            <div class="col-sm-6">
-                                <h6>Advantages</h6>
-                                <ul>
-                                    <li>Interest is not charged on the unused portion of the line of credit</li>
-                                    <li>Adaptable financial planning since funds can be drawn whenever necessary</li>
-                                    <li>Variable payments once funds are drawn</li>
-                                </ul>
+                            <div class="col-sm-6 info-col-custom">
+                                <div class="page-box">
+                                    <h6>Advantages</h6>
+                                    <ul>
+                                        <li>Interest is not charged on the unused portion of the line of credit</li>
+                                        <li>Adaptable financial planning since funds can be drawn whenever necessary</li>
+                                        <li>Variable payments once funds are drawn</li>
+                                    </ul>
+                                </div>
                             </div>
-                            <div class="col-sm-6">
-                                <h6>Disadvantages</h6>
-                                <ul>
-                                    <li>Up-front costs often associated with obtaining the line</li>
-                                    <li>Depending on the business structure, an owner may be personally liable for repayment if the business fails</li>
-                                </ul>
+                            <div class="col-sm-6 info-col-custom">
+                                <div class="page-box">
+                                    <h6>Disadvantages</h6>
+                                    <ul>
+                                        <li>Up-front costs often associated with obtaining the line</li>
+                                        <li>Depending on the business structure, an owner may be personally liable for repayment if the business fails</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-6">
-                                <h6>Minimum Requirements</h6>
-                                <ul>
-                                    <li>1 year in business</li>
-                                    <li>$100,000 in annual revenue</li>
-                                </ul>
+                            <div class="col-sm-6 info-col-custom">
+                                <div class="page-box">
+                                    <h6>Minimum Requirements</h6>
+                                    <ul>
+                                        <li>1 year in business</li>
+                                        <li>$100,000 in annual revenue</li>
+                                    </ul>
+                                </div>
                             </div>
-                            <div class="col-sm-6">
-                                <h6>Additional Information Requirements</h6>
-                                <ul>
-                                    <li>Bank statements</li>
-                                    <li>Financial statements</li>
-                                    <li>Business tax returns
-                                    <li>Personal guarantee</li>
-                                </ul>
+                            <div class="col-sm-6 info-col-custom">
+                                <div class="page-box">
+                                    <h6>Additional Information Requirements</h6>
+                                    <ul>
+                                        <li>Bank statements</li>
+                                        <li>Financial statements</li>
+                                        <li>Business tax returns</li>
+                                        <li>Personal guarantee</li>
+                                    </ul>
+                                </div>
                             </div>
                         </div>
                     </div>
